le site travail avec des fonctionalite simple jusqua maintenant

--- a/admin.html
+++ b/admin.html
@@ -345,7 +345,7 @@
     <!-- Header Admin -->
     <header class="admin-header">
         <div class="admin-header-content">
-            <h1 class="admin-title">🛠️ Administration FandiApp</h1>
+            <h1 class="admin-title">🛠️ Admin FandiApp</h1>
             <a href="../index.html" class="back-link">← Retour au site</a>
         </div>
     </header>
