--- a/index.html
+++ b/index.html
@@ -1007,30 +1007,46 @@
         }
 
         /* Media queries pour responsive design */
+        /* ================================
+           RESPONSIVE DESIGN - MEDIA QUERIES
+           Optimisé pour Mobile, Tablette et Desktop
+           ================================ */
+
+        /* Tablette et petits écrans (max 1024px) */
+        @media (max-width: 1024px) {
+            .cars-grid {
+                grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+                gap: 1.5rem;
+            }
+
+            .container {
+                padding: 0 1.5rem;
+            }
+        }
+
+        /* Tablette portrait et mobile landscape (max 768px) */
         @media (max-width: 768px) {
+            /* Header responsive */
             .header-content {
                 padding: 0 1rem;
+                flex-wrap: wrap;
             }
 
             .logo {
                 font-size: 1.8rem;
             }
 
+            .logo::before {
+                font-size: 1.5rem;
+            }
+
             .contact-link {
                 font-size: 0.85rem;
                 padding: 0.5rem 1rem;
+                white-space: nowrap;
             }
 
-            /* Navigation supprimée - styles commentés
-            .nav {
-                display: none;
-            }
-
-            .mobile-menu-btn {
-                display: block;
-            }
-            */
-
+            /* Main content spacing */
             .main {
                 padding: 1rem;
                 margin-top: 70px;
@@ -1039,21 +1055,26 @@
             .container {
                 flex-direction: column;
                 gap: 1rem;
+                padding: 0 0.5rem;
             }
 
+            /* Sidebar search devient full-width */
             .search-sidebar {
                 width: 100%;
                 position: static;
                 margin-bottom: 1rem;
+                padding: 1.5rem;
             }
 
+            /* Page title */
             .page-title h1 {
                 font-size: 2rem;
             }
 
+            /* Apologize card */
             .apologize-card {
                 padding: 1.5rem;
-                margin: 1rem;
+                margin: 1rem 0;
             }
 
             .apologize-card h3 {
@@ -1064,49 +1085,183 @@
                 font-size: 0.9rem;
             }
 
+            /* Grid des voitures - 1 colonne sur tablette */
             .cars-grid {
                 grid-template-columns: 1fr;
                 gap: 1.5rem;
+                min-height: 400px;
             }
 
+            /* Modal responsive - prend 95% de l'écran */
             .modal-content {
                 width: 95%;
                 max-width: 95%;
                 padding: 1.5rem;
                 margin: 1rem auto;
                 max-height: 95vh;
+                overflow-y: auto;
             }
 
-            .cars-grid {
-                min-height: 400px;
+            .modal-title {
+                font-size: 1.3rem;
             }
 
+            /* Form actions en colonne */
             .form-actions {
                 flex-direction: column;
+                gap: 0.8rem;
             }
 
             .btn {
                 width: 100%;
+                padding: 0.9rem;
+            }
+
+            /* Car card responsive */
+            .car-card {
+                max-width: 100%;
+            }
+
+            .car-image {
+                height: 220px;
+            }
+
+            /* Price calculation responsive */
+            .price-calculation {
+                padding: 1.2rem;
             }
         }
 
+        /* Mobile (max 480px) - Optimisé pour smartphone */
         @media (max-width: 480px) {
+            /* Header mobile */
             .logo {
                 font-size: 1.5rem;
             }
 
+            .logo::before {
+                font-size: 1.3rem;
+            }
+
+            .contact-link {
+                font-size: 0.75rem;
+                padding: 0.4rem 0.8rem;
+            }
+
+            .header-content {
+                padding: 0 0.75rem;
+            }
+
+            /* Main content */
+            .main {
+                padding: 0.75rem;
+                margin-top: 65px;
+            }
+
+            .container {
+                padding: 0;
+            }
+
+            /* Search sidebar mobile */
+            .search-sidebar {
+                padding: 1rem;
+                border-radius: 10px;
+            }
+
+            .search-sidebar h2 {
+                font-size: 1.2rem;
+            }
+
+            .filter-group label {
+                font-size: 0.9rem;
+            }
+
+            .filter-group input,
+            .filter-group select {
+                padding: 0.6rem;
+                font-size: 0.95rem;
+            }
+
+            /* Page title mobile */
+            .page-title h1 {
+                font-size: 1.6rem;
+                padding: 0.5rem 0;
+            }
+
+            /* Car card mobile */
             .car-content {
                 padding: 1rem;
             }
 
-            .page-title h1 {
+            .car-card h3 {
+                font-size: 1.2rem;
+            }
+
+            .car-card p {
+                font-size: 0.9rem;
+            }
+
+            .car-image {
+                height: 180px;
+            }
+
+            /* Buttons mobile - Plus gros pour le touch */
+            .btn {
+                padding: 1rem;
+                font-size: 1rem;
+                min-height: 48px; /* Taille minimale pour touch-friendly */
+            }
+
+            .btn-primary {
+                font-weight: bold;
+            }
+
+            /* Modal mobile - Full screen style */
+            .modal-content {
+                width: 100%;
+                max-width: 100%;
+                padding: 1rem;
+                margin: 0;
+                border-radius: 0;
+                max-height: 100vh;
+                height: 100%;
+            }
+
+            .modal-header {
+                margin-bottom: 1.5rem;
+                padding-bottom: 1rem;
+                border-bottom: 2px solid #e9ecef;
+            }
+
+            .modal-title {
+                font-size: 1.2rem;
+            }
+
+            .close-btn {
                 font-size: 1.8rem;
             }
 
-            /* Responsive pour la section de calcul de prix */
+            /* Form mobile */
+            .form-group {
+                margin-bottom: 1.2rem;
+            }
+
+            .form-group label {
+                font-size: 0.95rem;
+                margin-bottom: 0.4rem;
+            }
+
+            .form-group input {
+                padding: 0.75rem;
+                font-size: 1rem;
+                min-height: 48px; /* Touch-friendly */
+            }
+
+            /* Price calculation mobile */
             .price-calculation {
                 padding: 1rem;
                 margin: 0.5rem 0;
+                border-radius: 10px;
             }
 
             .price-header {
@@ -1118,10 +1273,12 @@
             .calculate-btn {
                 width: 100%;
                 padding: 0.8rem;
+                min-height: 48px;
             }
 
             .price-calendar {
                 max-height: 150px;
+                overflow-y: auto;
             }
 
             .calendar-day {
@@ -1131,7 +1288,79 @@
 
             .price-line {
                 font-size: 0.9rem;
-                padding: 0.3rem 0;
+                padding: 0.4rem 0;
+            }
+
+            .price-total {
+                font-size: 1.3rem;
+            }
+
+            /* Apologize card mobile */
+            .apologize-card {
+                padding: 1.2rem;
+                margin: 0.5rem 0;
+            }
+
+            .apologize-card h3 {
+                font-size: 1.1rem;
+            }
+        }
+
+        /* Très petits écrans (max 360px) - Petits smartphones */
+        @media (max-width: 360px) {
+            .logo {
+                font-size: 1.3rem;
+            }
+
+            .contact-link {
+                font-size: 0.7rem;
+                padding: 0.3rem 0.6rem;
+            }
+
+            .page-title h1 {
+                font-size: 1.4rem;
+            }
+
+            .car-image {
+                height: 160px;
+            }
+
+            .btn {
+                font-size: 0.9rem;
+            }
+        }
+
+        /* Landscape mobile (orientation paysage) */
+        @media (max-height: 500px) and (orientation: landscape) {
+            .modal-content {
+                max-height: 95vh;
+                overflow-y: scroll;
+            }
+
+            .car-image {
+                height: 150px;
+            }
+
+            .main {
+                margin-top: 60px;
+            }
+        }
+
+        /* Print styles - Pour impression */
+        @media print {
+            .header,
+            .search-sidebar,
+            .btn,
+            .modal {
+                display: none !important;
+            }
+
+            .cars-grid {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
+            .car-card {
+                break-inside: avoid;
             }
         }
 
