refactor: renommer clio5Pricing.js en carPricing.js pour refléter sa fonction générique

--- a/index.html
+++ b/index.html
@@ -3495,7 +3495,7 @@
        title="Contactez-nous sur WhatsApp">
     </a>
 
-    <!-- Script de calcul prix Clio 5 avec majoration weekend -->
-    <script src="clio5Pricing.js"></script>
+    <!-- Script de calcul prix avec majoration weekend -->
+    <script src="carPricing.js"></script>
 </body>
 </html>
