feat: synchronisation complète admin-frontend + réductions longue durée + thème dark/light + cohérence globale
- Synchronisation dynamique entre admin panel et index.html via API backend
- Système de réductions automatiques longue durée (10%, 15%, 20%)
- Calcul de prix unifié avec majoration weekend +20%
- Support voitures dynamiques ajoutées via admin
- Thème Dark/Light sur toutes les pages (persistance localStorage)
- Login admin avec authentification
- Gestion intelligente des images avec placeholder
- reservations-calendar.html maintenant dynamique (charge depuis API)
- Correction API_URL dans config.js pour payment.html
- Documentation architecture complète (ARCHITECTURE_COHERENCE.md)
- Event listeners propres (suppression onclick inline)
- window.carsDatabase global pour carPricing.js
- Voitures statiques + dynamiques dans index.html
- Système cohérent et professionnel end-to-end

--- a/reservations-calendar.html
+++ b/reservations-calendar.html
@@ -162,16 +162,16 @@
 
   <script>
     const API_BASE = 'http://localhost:3001';
-    const cars = [
-      { id: 'car1', name: 'Clio 5', price: 35 },
-      { id: 'car2', name: 'Audi A4', price: 85 },
-      { id: 'car3', name: 'Mercedes CLA 220', price: 120 },
-      { id: 'car4', name: 'Dacia Logan', price: 45 },
-      { id: 'car5', name: 'Peugeot 308', price: 65 }
-    ];
+    let cars = []; // Sera chargé dynamiquement depuis l'API
 
     async function loadReservations() {
       try {
+        // Charger les voitures depuis l'API
+        const carsResponse = await fetch(`${API_BASE}/cars`);
+        if (!carsResponse.ok) throw new Error('API non disponible');
+        cars = await carsResponse.json();
+        
+        // Charger les réservations
         const response = await fetch(`${API_BASE}/reservations`);
         if (!response.ok) throw new Error('API non disponible');
         
