Update brand identity and color scheme - Changed site name from FandiApp/FandiRent to FANDIAUTO - Updated contact info to Algeria (Tlemcen): +213 771 39 14 80 - Updated address to 47 Riat Makhoukh, mansourah Tlemcen 13000 Algérie - Changed email domain to fandiauto.dz - Applied Ocean Breeze color theme across all pages - Updated social media links and branding

--- a/admin-login.html
+++ b/admin-login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin Login - FandiApp</title>
+    <title>Admin Login - FANDIAUTO</title>
     <style>
         /* ================================
            THEME VARIABLES - Dark/Light Mode
@@ -11,14 +11,14 @@
         
         /* Variables CSS pour le thème Light (par défaut) */
         :root {
-            --bg-primary: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            --bg-primary: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
             --bg-secondary: #ffffff;
             --text-primary: #333333;
             --text-secondary: #666666;
             --input-bg: #ffffff;
             --input-border: #e0e0e0;
-            --input-focus-border: #667eea;
-            --btn-bg: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            --input-focus-border: #2A90A8;
+            --btn-bg: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
             --btn-hover: linear-gradient(135deg, #5568d3 0%, #6a3f94 100%);
             --card-bg: #ffffff;
             --error-bg: #ffe5e5;
@@ -42,7 +42,7 @@
             --error-bg: #3a2222;
             --error-border: #e05555;
             --error-text: #ff6b6b;
-            --success-text: #2ecc71;
+            --success-text: #4CAF78;
         }
 
         * {
@@ -91,7 +91,7 @@
 
         .logo h1 {
             font-size: 2.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
             -webkit-background-clip: text;
             background-clip: text;
             -webkit-text-fill-color: transparent;
@@ -238,7 +238,7 @@
     <div class="login-container">
         <div class="logo">
             <div class="lock-icon">🔐</div>
-            <h1>FandiApp</h1>
+            <h1>FANDIAUTO</h1>
             <p>Administration Panel</p>
         </div>
 
