--- a/pages/contact.html
+++ b/pages/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - FandiApp Location de Voitures</title>
+    <title>Contact - FANDIAUTO Location de Voitures</title>
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
 
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
             min-height: 100vh;
             padding: 2rem 1rem;
         }
@@ -83,7 +83,7 @@
         }
 
         .contact-card h2 {
-            color: #667eea;
+            color: #2A90A8;
             margin-bottom: 1rem;
             font-size: 1.5rem;
         }
@@ -101,14 +101,14 @@
         }
 
         .contact-info a {
-            color: #667eea;
+            color: #2A90A8;
             text-decoration: none;
             font-weight: bold;
             transition: color 0.3s ease;
         }
 
         .contact-info a:hover {
-            color: #764ba2;
+            color: #7CC6D7;
             text-decoration: underline;
         }
 
@@ -128,7 +128,7 @@
 
         .hours-table td:first-child {
             font-weight: bold;
-            color: #667eea;
+            color: #2A90A8;
         }
 
         .hours-table td:last-child {
@@ -145,7 +145,7 @@
         }
 
         .map-container h2 {
-            color: #667eea;
+            color: #2A90A8;
             margin-bottom: 1rem;
             font-size: 1.8rem;
         }
@@ -174,7 +174,7 @@
             align-items: center;
             gap: 0.5rem;
             padding: 0.8rem 1.5rem;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
             color: white;
             text-decoration: none;
             border-radius: 8px;
@@ -241,14 +241,13 @@
                 <div class="contact-card-icon">📱</div>
                 <h2>Téléphone</h2>
                 <div class="contact-info">
-                    <p>📞 <a href="tel:+212600000000">+212 6 00 00 00 00</a></p>
-                    <p>📞 <a href="tel:+212700000000">+212 7 00 00 00 00</a></p>
+                    <p>📞 <a href="tel:+213771391480">+213 771 39 14 80</a></p>
                     <p style="color: #666; font-size: 0.9rem; margin-top: 1rem;">
                         Disponible 7j/7 de 8h à 20h
                     </p>
                     
                     <div class="social-links">
-                        <a href="https://wa.me/212600000000" class="social-btn whatsapp-btn" target="_blank">
+                        <a href="https://wa.me/213771391480" class="social-btn whatsapp-btn" target="_blank">
                             💬 WhatsApp
                         </a>
                     </div>
@@ -260,8 +259,8 @@
                 <div class="contact-card-icon">📧</div>
                 <h2>Email</h2>
                 <div class="contact-info">
-                    <p>✉️ <a href="mailto:contact@fandiapp.ma">contact@fandiapp.ma</a></p>
-                    <p>✉️ <a href="mailto:reservations@fandiapp.ma">reservations@fandiapp.ma</a></p>
+                    <p>✉️ <a href="mailto:contact@fandiauto.dz">contact@fandiauto.dz</a></p>
+                    <p>✉️ <a href="mailto:reservations@fandiauto.dz">reservations@fandiauto.dz</a></p>
                     <p style="color: #666; font-size: 0.9rem; margin-top: 1rem;">
                         Réponse sous 24h maximum
                     </p>
@@ -273,10 +272,10 @@
                 <div class="contact-card-icon">📍</div>
                 <h2>Adresse</h2>
                 <div class="contact-info">
-                    <p>🏢 <strong>FandiApp Location</strong></p>
-                    <p>123 Avenue Mohammed V</p>
-                    <p>Casablanca 20000</p>
-                    <p>Maroc</p>
+                    <p>🏢 <strong>FANDIAUTO Location</strong></p>
+                    <p>47 Riat Makhoukh, mansourah</p>
+                    <p>Tlemcen 13000</p>
+                    <p>Algérie</p>
                     <div class="social-links" style="margin-top: 1rem;">
                         <a href="https://maps.google.com" class="social-btn" target="_blank">
                             🗺️ Voir sur Google Maps
@@ -328,7 +327,7 @@
         <!-- Urgence 24/7 -->
         <div class="emergency-contact">
             <h3>🚨 Service d'urgence 24/7</h3>
-            <p>📞 +212 6 12 34 56 78</p>
+            <p>📞 +213 771 39 14 80</p>
             <p style="font-size: 1rem; margin-top: 0.5rem; opacity: 0.9;">
                 Pour toute urgence en dehors des heures d'ouverture
             </p>
@@ -341,7 +340,7 @@
                 🗺️ Carte Google Maps à intégrer ici
             </div>
             <p style="color: #666; margin-top: 1rem; text-align: center;">
-                Nous sommes situés au cœur de Casablanca, facilement accessible en voiture ou en transport en commun
+                Nous sommes situés à Tlemcen, facilement accessible en voiture ou en transport en commun
             </p>
         </div>
     </div>
