--- a/reservations-calendar.html
+++ b/reservations-calendar.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Calendrier des Réservations - FandiRent</title>
+  <title>Calendrier des Réservations - FANDIAUTO</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -20,7 +20,7 @@
       padding: 30px;
     }
     h1 {
-      color: #667eea;
+      color: #2A90A8;
       margin-bottom: 10px;
     }
     .subtitle {
@@ -34,7 +34,7 @@
       overflow: hidden;
     }
     .car-header {
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #2A90A8 0%, #7CC6D7 100%);
       color: white;
       padding: 15px 20px;
       display: flex;
@@ -138,7 +138,7 @@
     .loading {
       text-align: center;
       padding: 50px;
-      color: #667eea;
+      color: #2A90A8;
       font-size: 1.2rem;
     }
     @media (max-width: 768px) {
