--- a/index.html
+++ b/index.html
@@ -361,6 +361,35 @@
             transition: all 0.3s ease;
         }
 
+        /* Style harmonisé pour les <select> (agences) dans la sidebar */
+        .date-group select {
+            width: 100%;
+            padding: 0.8rem 1rem 0.8rem 0.8rem;
+            background: var(--input-bg);
+            color: var(--text-primary);
+            border: 2px solid var(--input-border);
+            border-radius: 8px;
+            font-size: 1rem;
+            transition: all 0.3s ease;
+            cursor: pointer;
+            appearance: none; /* Retirer le style natif */
+            background-image: linear-gradient(var(--input-bg), var(--input-bg)), url("data:image/svg+xml,%3Csvg width='20' height='20' viewBox='0 0 24 24' fill='none' stroke='%232A90A8' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpolyline points='6 9 12 15 18 9'%3E%3C/polyline%3E%3C/svg%3E");
+            background-repeat: no-repeat, no-repeat;
+            background-position: right 0.75rem center, right 0.75rem center;
+            background-size: 100% 100%, 20px;
+        }
+
+        .date-group select:focus {
+            outline: none;
+            border-color: var(--input-focus-border);
+            box-shadow: 0 0 0 3px rgba(42, 144, 168, 0.18);
+        }
+
+        /* Petite amélioration hover pour feedback */
+        .date-group select:hover {
+            border-color: var(--input-focus-border);
+        }
+
         .date-group input:focus {
             outline: none;
             border-color: var(--input-focus-border);
@@ -1614,7 +1643,28 @@
         <div class="container">
             <!-- Sidebar de recherche -->
             <aside class="search-sidebar">
-                <h3>🗓️ Rechercher par dates</h3>
+                <h3>Réserver en ligne</h3>
+                <!-- Agences : mettez à jour la liste des options ci-dessous si vous ajoutez de nouveaux points de service.
+                     Cette section alimente la sélection d'agence pour la recherche rapide. -->
+                <div class="date-group">
+                    <label for="searchDepartureAgency">Agence de Départ :</label>
+                    <select id="searchDepartureAgency" name="searchDepartureAgency" required>
+                        <option value="" disabled selected>Choisissez une agence</option>
+                        <!-- LISTE AGENCES (MAINTENANCE UNIQUE) : Modifier ici pour mettre à jour partout si vous synchronisez ensuite avec la modal. -->
+                        <option value="Aéroport Tlemcen">Aéroport Tlemcen</option>
+                        <option value="Aéroport Oran">Aéroport Oran</option>
+                        <option value="Agence Tlemcen">Agence Tlemcen</option>
+                    </select>
+                </div>
+                <div class="date-group">
+                    <label for="searchReturnAgency">Agence de Retour :</label>
+                    <select id="searchReturnAgency" name="searchReturnAgency" required>
+                        <option value="" disabled selected>Choisissez une agence</option>
+                        <option value="Aéroport Tlemcen">Aéroport Tlemcen</option>
+                        <option value="Aéroport Oran">Aéroport Oran</option>
+                        <option value="Agence Tlemcen">Agence Tlemcen</option>
+                    </select>
+                </div>
                 
                 <div class="date-group">
                     <label for="searchStartDate">Date de début :</label>
@@ -1833,6 +1883,28 @@
                 <div class="form-group">
                     <label for="customerEmail">Adresse e-mail :</label>
                     <input type="email" id="customerEmail" name="customerEmail" required placeholder="votre.email@exemple.com">
+                </div>
+
+                <div class="form-group">
+                    <label for="departureAgency">Agence de Départ :</label>
+                    <select id="departureAgency" name="departureAgency" required>
+                        <option value="" disabled selected>Choisissez une agence de départ</option>
+                        <!-- LISTE AGENCES (SYNC AVEC SIDEBAR) : Si vous modifiez, mettez à jour aussi searchDepartureAgency -->
+                        <option value="Aéroport Tlemcen">Aéroport Tlemcen</option>
+                        <option value="Aéroport Oran">Aéroport Oran</option>
+                        <option value="Agence Tlemcen">Agence Tlemcen</option>
+                    </select>
+                </div>
+
+                <div class="form-group">
+                    <label for="returnAgency">Agence de Retour :</label>
+                    <select id="returnAgency" name="returnAgency" required>
+                        <option value="" disabled selected>Choisissez une agence de retour</option>
+                        <!-- LISTE AGENCES (SYNC AVEC SIDEBAR) -->
+                        <option value="Aéroport Tlemcen">Aéroport Tlemcen</option>
+                        <option value="Aéroport Oran">Aéroport Oran</option>
+                        <option value="Agence Tlemcen">Agence Tlemcen</option>
+                    </select>
                 </div>
 
                 <div class="form-group">
